--- a/game/highway-racer-3d.html
+++ b/game/highway-racer-3d.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="
-          
+    
+		<meta property="og:image" content="https://faf-games.github.io/assets/img/highwayracer3d/highway-racer-3d-logo.webp">
         <meta name="keywords" content="  highway racer 3d online
         highway racer 3d poki
         highway racer 3d crazy games
@@ -16,8 +17,8 @@
         highway racer download">
         <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/highway-racer-3d.html" />
-	<meta name="publisher" content="FAF Games Team">
-	<meta name="robots" content="index, follow">
+	    <meta name="publisher" content="FAF Games Team">
+	    <meta name="robots" content="index, follow">
         <!-- Title -->
         <title>Hightway Racer 3D Unblocked: Play Now for Free on FAF Games</title>
         <!-- Favicon -->
