--- a/game/shell-shockers.html
+++ b/game/shell-shockers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html lang="en-US">
     <head>
-         <meta name="robots" content="index, follow">
+        <meta name="robots" content="index, follow">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,10 @@
         <meta name="keywords" content="shell shockers game, Shell Shockers, shellshockers, shell-shockers play shell shockers online, shell shockers unblocked, multiplayer egg shooter game, 3D first-person shooter online, free browser shooting games, no download shooting games, fps egg game multiplayer, play egg shooting games, unblocked shooting games for school">
         <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/shell-shockers.html" />
-	<meta name="publisher" content="FAF Games Team">
+	    <meta name="publisher" content="FAF Games Team">
+	    <meta property="og:image" content="https://faf-games.github.io/assets/img/shell-shockers/logo.png">
+
+		
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
