--- a/game/spacebar-clicker.html
+++ b/game/spacebar-clicker.html
@@ -7,12 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Spacebar Clicker: Play Now for Free on FAF Games</title>
     <meta name="description" content="Play Spacebar Clicker Unblocked for free on FAF Games! Test your speed and challenge yourself anytime, anywhere. No restrictions, just fun!">        
-   <meta name="keywords" content="spacebar clicker, spacebar clicker unblocked, clicker games, spacebar speed test, spacebar challenge, free clicker game, online spacebar game, spacebar pressing game, unblocked games, FAF Games">
+    <meta name="keywords" content="spacebar clicker, spacebar clicker unblocked, clicker games, spacebar speed test, spacebar challenge, free clicker game, online spacebar game, spacebar pressing game, unblocked games, FAF Games">
 
-   <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/spacebar-clicker.html" />
+    <meta name="author" content="FAF Games Team">
+    <link rel="canonical" href="/game/spacebar-clicker.html" />
 	<meta name="publisher" content="FAF Games Team">
 	<meta name="robots" content="index, follow">
+    <meta property="og:image" content="https://faf-games.github.io/assets/img/spacebar-clicker/spacebar-clicker.png">
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
