--- a/game/retro-bowl.html
+++ b/game/retro-bowl.html
@@ -11,7 +11,7 @@
         <meta name="keywords" content="sport games online, sport games free download, sport games for kids, sports games free ">
         <meta name="news_keywords" content="retro bowl unblocked
         retro bowl google
-	Retro Bowl Unblocked
+	    Retro Bowl Unblocked
         play retro bowl
         retro bowl download
         retro bowl miniplay
@@ -21,8 +21,10 @@
         retro bowl poki">
         <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/retro-bowl.html" />
-	<meta name="publisher" content="FAF Games Team">
-	<meta name="robots" content="index, follow">
+	    <meta name="publisher" content="FAF Games Team">
+	    <meta name="robots" content="index, follow">
+	    <meta property="og:image" content="https://faf-games.github.io/assets/img/retrobowl/retro-bowl.png">
+
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
@@ -356,7 +358,39 @@
                 <div class="row">
 
 
-                                    	        <div class="banner-ad-wrapper"><div class="banner-ad-content" style="padding: 20px 0; text-align: center;">
+     <div class="banner-ad-wrapper"><div class="banner-ad-content" style="padding: 20px 0; text-align: center;">
+<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+<script>
+  window.googletag = window.googletag || {cmd: []};
+  googletag.cmd.push(function() {
+    googletag.defineSlot('/23079347111/Displayads', [750, 300], 'div-gpt-ad-1732724279654-0').addService(googletag.pubads());
+    googletag.pubads().enableSingleRequest();
+    googletag.enableServices();
+  });
+</script><!-- /23079347111/Displayads -->
+<div id='div-gpt-ad-1732724279654-0' style='min-width: 750px; min-height: 300px;'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1732724279654-0'); });
+  </script>
+</div>
+				
+				<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+<script>
+      window.googletag = window.googletag || {cmd: []};
+
+      // GPT ad slots
+      var anchorSlot_2;
+
+      googletag.cmd.push(function() {
+        anchorSlot_2 = googletag.defineOutOfPageSlot('//23079347111/sticky', googletag.enums.OutOfPageFormat.BOTTOM_ANCHOR);
+        anchorSlot_2.addService(googletag.pubads());
+
+         // Enable SRA and services.
+        googletag.pubads().enableSingleRequest();
+        googletag.enableServices();
+        googletag.display(anchorSlot_2);
+      });
+    </script>
 
 			
 
