--- a/game/bullet-force.html
+++ b/game/bullet-force.html
@@ -9,6 +9,8 @@
          customizable weapons, thrilling gunplay, a variety of game types, and more. 
          A single-player option with bots is also available in Bullet Force.">
          <meta name="title" content="Masked Forces">
+		 <meta property="og:image" content="https://faf-games.github.io/assets/img/bulletforce/bullet-force.png">
+
          <meta name="keywords" content="shooting game online
          shooting games pc
          gun shooting game 
