--- a/index.html
+++ b/index.html
@@ -397,13 +397,13 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 				       <div class="games-item desktop">
 				    <div class="games-single-item img-contain-isotope">
 				        <div class="games-thumb">
-				            <a href="./game/basketball-bros.html">
-				                <img src="../assets/img/basketball-bros/basketball-bros.webp" alt="Basketball Bros" title="Basketball Bros" />
+				            <a href="./game/snow-bros.html">
+				                <img src="../assets/img/snow-bros/snow-bros.webp" alt="Snow Bros" title="Snow Bros" />
 				            </a>
 				        </div>
 				        <div class="games-desc">
-				            <h3><a href="./game/basketball-bros.html">Basketball Bros</a></h3>
-				            <p class="game-meta">Sport | Desktop | 2 Player games</p>
+				            <h3><a href="./game/snow-bros.html">Snow Bros</a></h3>
+				            <p class="game-meta">Arcade | Desktop | 2 Player games</p>
 				        </div>
 				    </div>
 				</div>
@@ -452,6 +452,19 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 				    </div>
 				</div>
 				<!-- end game item -->
+								   				       <div class="games-item desktop">
+				    <div class="games-single-item img-contain-isotope">
+				        <div class="games-thumb">
+				            <a href="./game/basketball-bros.html">
+				                <img src="../assets/img/basketball-bros/basketball-bros.webp" alt="Basketball Bros" title="Basketball Bros" />
+				            </a>
+				        </div>
+				        <div class="games-desc">
+				            <h3><a href="./game/basketball-bros.html">Basketball Bros</a></h3>
+				            <p class="game-meta">Sport | Desktop | 2 Player games</p>
+				        </div>
+				    </div>
+				</div>
 				       				       <div class="games-item desktop">
 				    <div class="games-single-item img-contain-isotope">
 				        <div class="games-thumb">
