--- a/game/snow-bros.html
+++ b/game/snow-bros.html
@@ -416,6 +416,74 @@
           <section class="fag-games-area related_games section_100">
              <div class="container">
                 <div class="row">
+					<div class="dark-theme container">
+
+  <div class="dark-theme section">
+    <h2>About</h2>
+    <p><strong>Snow Bros</strong> is a classic arcade platformer where players control the snowmen Nick and Tom to trap enemies in snow, roll snowballs to clear stages, and rescue characters across colorful levels. This <strong>Snow Bros unblocked</strong> version preserves the original pixel art, chiptune music, and arcade feel. Play solo or team up in <strong>2 player mode</strong> and enjoy retro arcade action directly in your browser on <a href="https://faf-games.github.io" target="_blank">unblocked games</a> without downloads.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>How to Play / Tips</h2>
+    <ul>
+      <li>Throw snow to cover and freeze enemies, then push the snowball to defeat them.</li>
+      <li>Use rolling snowballs to clear multiple enemies at once for big combos.</li>
+      <li>Collect power-ups and bonus items to increase speed, strength, or points.</li>
+      <li>Play with a friend in 2 player mode to coordinate traps and clear stages faster.</li>
+      <li>Watch enemy patterns and time your throws to avoid hits and traps.</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Controls</h2>
+    <ul>
+      <li><strong>Arrow Keys / WASD:</strong> Move</li>
+      <li><strong>Up / W:</strong> Jump</li>
+      <li><strong>Space / Enter:</strong> Throw snow</li>
+      <li><strong>Down / S:</strong> Push/roll snowball</li>
+      <li><strong>Enter / Start:</strong> Start / Confirm</li>
+    </ul>
+  </div>
+
+<div class="dark-theme section">
+  <h2>Controls</h2>
+  <ul>
+    <li><strong>Arrow Keys / WASD:</strong> Move</li>
+    <li><strong>Up / W:</strong> Jump</li>
+    <li><strong>Space / Enter:</strong> Throw snow</li>
+    <li><strong>Down / S:</strong> Push/roll snowball</li>
+    <li><strong>Enter / Start:</strong> Start / Confirm</li>
+    <li><strong>Custom Controls:</strong> You can set and adjust your own key bindings in the game’s control settings menu.</li>
+  </ul>
+</div>
+
+  <div class="dark-theme section">
+    <h2>Game Objective</h2>
+    <p>Trap enemies in snow, roll snowballs to clear stages, collect bonuses, and reach the end of each level. Clear all enemies to progress and rescue characters as you advance through the game.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Unblocked Game Disclaimer</h2>
+    <p>This is an unblocked HTML5 version of Snow Bros, playable instantly in your browser without downloads or restrictions for school, work, or home.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Related Games</h2>
+    <ul>
+      <li><a href="https://faf-games.github.io/game/super-mario.html">Super Mario</a></li>
+      <li><a href="https://faf-games.github.io/game/bubble-bobble.html">Bubble Bobble</a></li>
+      <li><a href="https://faf-games.github.io/game/ice-climber.html">Ice Climber</a></li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section tags">
+    <a href="https://faf-games.github.io/action/index.html" class="tag">Action</a>
+    <a href="https://faf-games.github.io/adventure/index.html" class="tag">Adventure</a>
+    <a href="https://faf-games.github.io/2-player-games/index.html" class="tag">2 Player Games</a>
+  </div>
+
+</div>
+
                    <div class="col-12">
                       <div class="site-heading">
                          <h2 class="heading_animation">Related <span>games</span></h2>
