--- a/game/snow-bros.html
+++ b/game/snow-bros.html
@@ -426,34 +426,25 @@
   <div class="dark-theme section">
     <h2>How to Play / Tips</h2>
     <ul>
+	  <li>First, you have to press the Shift Button to load the Credit and then press <b>Enter</b> to start the game and set Controls as per your hand practices</li> 
       <li>Throw snow to cover and freeze enemies, then push the snowball to defeat them.</li>
       <li>Use rolling snowballs to clear multiple enemies at once for big combos.</li>
       <li>Collect power-ups and bonus items to increase speed, strength, or points.</li>
-      <li>Play with a friend in 2 player mode to coordinate traps and clear stages faster.</li>
+      <li>Play with a friend in 2-player mode to coordinate traps and clear stages faster.</li>
       <li>Watch enemy patterns and time your throws to avoid hits and traps.</li>
     </ul>
   </div>
 
-  <div class="dark-theme section">
-    <h2>Controls</h2>
-    <ul>
-      <li><strong>Arrow Keys / WASD:</strong> Move</li>
-      <li><strong>Up / W:</strong> Jump</li>
-      <li><strong>Space / Enter:</strong> Throw snow</li>
-      <li><strong>Down / S:</strong> Push/roll snowball</li>
-      <li><strong>Enter / Start:</strong> Start / Confirm</li>
-    </ul>
-  </div>
 
 <div class="dark-theme section">
   <h2>Controls</h2>
   <ul>
     <li><strong>Arrow Keys / WASD:</strong> Move</li>
-    <li><strong>Up / W:</strong> Jump</li>
-    <li><strong>Space / Enter:</strong> Throw snow</li>
-    <li><strong>Down / S:</strong> Push/roll snowball</li>
+    <li><strong>Up / s:</strong> Jump</li>
+    <li><strong>A :</strong> Throw snow</li>
+    <li><strong>Shift:</strong> To Load Credit</li>
     <li><strong>Enter / Start:</strong> Start / Confirm</li>
-    <li><strong>Custom Controls:</strong> You can set and adjust your own key bindings in the game’s control settings menu.</li>
+    <li><strong>Custom Controls:</strong> You can set and adjust your own key bindings in the game control settings menu.</li>
   </ul>
 </div>
 
