--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 				    </div>
 				</div>
 				<!-- end game item -->
+								   <!-- start game item -->
 				       <div class="games-item desktop">
 				    <div class="games-single-item img-contain-isotope">
 				        <div class="games-thumb">
@@ -407,6 +408,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 				        </div>
 				    </div>
 				</div>
+								   <!-- end game item -->
 				        <!-- start game item -->
 				       <div class="games-item desktop">
 					    <div class="games-single-item img-contain-isotope">
