--- a/index.html
+++ b/index.html
@@ -413,11 +413,11 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 					    <div class="games-single-item img-contain-isotope">
 					        <div class="games-thumb">
 					            <a href="../game/1v1-lol.html">
-					                <img src="../assets/img/1v1.lol/logo.webp" alt="1v1.LOL Unblocked" title="1v1.LOL Unblocked" />
+					                <img src="../assets/img/1v1.lol/logo.webp" alt="1v1.lol Unblocked" title="1v1.lol Unblocked" />
 					            </a>
 					        </div>
 					        <div class="games-desc">
-					            <h3><a href="../game/1v1-lol.html">1v1.LOL</a></h3>
+					            <h3><a href="../game/1v1-lol.html">1v1.lol Unblocked</a></h3>
 					            <p class="game-meta">Action | Shooting | Desktop</p>
 					        </div>
 					    </div>
@@ -1665,14 +1665,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
     filterBar.addEventListener('click', () => setTimeout(() => relayout(grid), 150));
   }
 })();
-</script>
-
-
-
- 
-
-
-		
+</script>	
 	
 </body>
 </html>
