--- a/2-player-games/index.html
+++ b/2-player-games/index.html
@@ -199,6 +199,20 @@ Popular 2 player games include action, racing, fighting, and strategy genres. Wh
     </div>
 </div>
 <!-- end game item -->
+									                <div class="games-item desktop">
+                                <div class="games-single-item img-contain-isotope">
+                                    <div class="games-thumb">
+                                            <a href="../game/snow-bros.html">
+                                                <img src="../assets/img/snow-bros/snow-bros.webp" alt="Snow bros" />
+                                            </a>
+                                    </div>
+                                    <div class="games-desc">
+                                        <h2><a href="../game/snow-bros.html">Snow bros</a></h2>
+                                        <p class="game-meta">Arcade | 2-Player | Desktop</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end game item -->
 				
 		                <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
