--- a/game/snow-rider-3d.html
+++ b/game/snow-rider-3d.html
@@ -21,6 +21,8 @@
         <link rel="canonical" href="/game/snow-rider-3d.html" />
 	<meta name="publisher" content="FAF Games Team">
 	<meta name="robots" content="index, follow">
+			 <meta property="og:image" content="https://faf-games.github.io/assets/img/snowrider3d/logo.png">
+
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
