--- a/game/tunnel-rush.html
+++ b/game/tunnel-rush.html
@@ -23,6 +23,8 @@
         tunnel rush 2 player
         tunnel rush 
         tunnel rush unblocked">
+			 <meta property="og:image" content="https://faf-games.github.io/assets/img/tunnelrush/tunnel-rush.png">
+
         <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/tunnel-rush.html" />
 	<meta name="publisher" content="FAF Games Team">
