--- a/game/demolition-derby-crash-racing.html
+++ b/game/demolition-derby-crash-racing.html
@@ -298,6 +298,14 @@
 
   gtag('config', 'G-6BPGNZNTLZ');
 </script>
+	<meta http-equiv="Content-Security-Policy"
+      content="default-src 'self' data: blob:;
+               script-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob:;
+               img-src 'self' data: blob: https:;
+               style-src 'self' 'unsafe-inline';
+               connect-src 'self' https:;
+               frame-ancestors 'self';
+               navigate-to 'self'">
    </head>
    <body>
        
