--- a/game/demolition-derby-crash-racing.html
+++ b/game/demolition-derby-crash-racing.html
@@ -298,14 +298,7 @@
 
   gtag('config', 'G-6BPGNZNTLZ');
 </script>
-	<meta http-equiv="Content-Security-Policy"
-      content="default-src 'self' data: blob:;
-               script-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob:;
-               img-src 'self' data: blob: https:;
-               style-src 'self' 'unsafe-inline';
-               connect-src 'self' https:;
-               frame-ancestors 'self';
-               navigate-to 'self'">
+ 
    </head>
    <body>
        
@@ -1336,7 +1329,7 @@
     <script src="../assets/js/main.js"></script>
     <script>
             function loadMainGame(){
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://ubg77.github.io/edit/demolition-derby-crash-racing/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://6x-classroom.io/class412/demolition-derby-crash-racing/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             document.getElementById('loadgame').scrollIntoView();
             }
