--- a/classroom6x/index.html
+++ b/classroom6x/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="car games, free car games, online car games, Classroom 6x, racing games, driving games, car simulator, 3D car games, drifting games, car racing, car parking games, car stunt games, realistic car games, multiplayer car games, car game unblocked, car driving simulator">
     <meta name="author" content="FAF Games Team">
 	<meta name="publisher" content="FAF Games Team">
-	 <link rel="canonical" href="/classroom6x" />
+	 <link rel="canonical" href="/classroom6x/" />
     <!-- Title -->
     <title>Classroom 6x - Play Online For Free | FAF Games</title>
     <!-- Favicon -->
