--- a/io-games/index.html
+++ b/io-games/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Play .io games online! Enjoy fun multiplayer browser games with no download needed. Jump into fast-paced action and compete with players worldwide.">
     <meta name="keyword" content="game, gaming, videogame, developer, steam, studio, team">
     <meta name="author" content="FAF Games Team">
-	 <link rel="canonical" href="/io-games" />
+	 <link rel="canonical" href="/io-games/" />
 
 	<meta name="publisher" content="FAF Games Team">
 	
