--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1062,7 +1062,7 @@ dl dd {
 <h2>How to Play 1v1 LOL</h2>
 <p>
   Jump into the game, pick a mode, and try to outlast your opponent. Use building to defend yourself, edit structures for quick peeks, and take precise shots. 
-  On school or restricted networks, you can also play the <a href="https://faf-games.github.io/1v1-lol-offline" target="_blank">1v1.LOL offline</a> version on  <a href="https://faf-games.github.io/" target="_blank">FaF Games</a> for free, with no downloads required.
+  On school or restricted networks, you can also play the <a href="https://faf-games.github.io/game/1v1-lol-offline" target="_blank">1v1.LOL offline</a> version on  <a href="https://faf-games.github.io/" target="_blank">FaF Games</a> for free, with no downloads required.
 </p>
    <h2>Game Mechanics Explained</h2>
    <p>1v1 LOL mixes <a href="https://faf-games.github.io/shooting" target="_blank">Shooting</a> with fast building. Walls block enemy pushes, ramps give you height, and platforms let you reset. The best players balance combat and construction seamlessly for nonstop action.</p>
