--- a/game/among-us.html
+++ b/game/among-us.html
@@ -24,7 +24,7 @@
         <link rel="canonical" href="/game/among-us" />
 	    <meta name="robots" content="index, follow">
 	    <meta name="publisher" content="FAF Games Team">
-		<meta property="og:image" content="faf-games.github.io/assets/img/amongus/among-us.01.png">
+		<meta property="og:image" content="faf-games.github.io/assets/img/amongus/among-us.png">
 
 	    
         <!-- Favicon -->
