--- a/game/among-us.html
+++ b/game/among-us.html
@@ -988,7 +988,7 @@
          <script>
             function loadMainGame()
             {
-                  var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://snow-rider-3d.io/class66/among-us/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+                  var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://6x-classroom.io/class412/among-us/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
                   document.getElementById("loadgame").innerHTML = html;
 
  // Show the fullscreen button after loading the game
