--- a/index.html
+++ b/index.html
@@ -37,31 +37,6 @@
     <!--Responsive css-->
     <link rel="stylesheet" href="assets/css/responsive.css">	
 	
-	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6BPGNZNTLZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-6BPGNZNTLZ');
-</script>
-
-
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebSite",
-  "name": "FAF Games",
-  "url": "https://faf-games.github.io",
-  "description": "Unblocked Games: Play a wide range of Unblocked Games Premium you can play at school, work, or anywhere. No downloads needed, just click and start playing.",
-  "keywords": ["unblocked games", "unblocked games 6x", "Unblocked Games Premium", "free online games"],
-  "publisher": {
-    "@type": "Organization",
-    "name": "FAF Games team"
-  }
-}
-</script>
 	  <style>
 .load-more-btn{
   display:inline-block; padding:12px 22px; border:0; border-radius:10px;
@@ -205,10 +180,31 @@
             background-color: #793202;
         }
 
-
-
-
   </style>
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6BPGNZNTLZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6BPGNZNTLZ');
+</script>
+	
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "FAF Games",
+  "url": "https://faf-games.github.io",
+  "description": "Unblocked Games: Play a wide range of Unblocked Games Premium you can play at school, work, or anywhere. No downloads needed, just click and start playing.",
+  "keywords": ["unblocked games", "unblocked games 6x", "Unblocked Games Premium", "free online games"],
+  "publisher": {
+    "@type": "Organization",
+    "name": "FAF Games team"
+  }
+}
+</script>
 
 	<script data-cfasync="false">
   window.ramp = window.ramp || {};
@@ -310,6 +306,21 @@
 <div id='div-gpt-ad-1759491994541-0' style='min-width: 750px; min-height: 300px;'>
   <script>
     googletag.cmd.push(function() { googletag.display('div-gpt-ad-1759491994541-0'); });
+  </script>
+</div>
+			  <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js" crossorigin="anonymous"></script>
+<script>
+  window.googletag = window.googletag || {cmd: []};
+  googletag.cmd.push(function() {
+    googletag.defineSlot('/23079347111/sticky', [[320, 100], [728, 90], [320, 50], [970, 90]], 'div-gpt-ad-1759493715342-0').addService(googletag.pubads());
+    googletag.pubads().enableSingleRequest();
+    googletag.enableServices();
+  });
+</script>
+			  <!-- /23079347111/sticky -->
+<div id='div-gpt-ad-1759493715342-0' style='min-width: 320px; min-height: 50px;'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1759493715342-0'); });
   </script>
 </div>
 
