--- a/index.html
+++ b/index.html
@@ -313,19 +313,30 @@
     googletag.enableServices();
   });
 </script>
-<!-- /23079347111/Displayads -->
+		   <!-- /23079347111/Displayads -->
 <div id='div-gpt-ad-1759491994541-0' style='min-width: 750px; min-height: 300px;'>
   <script>
     googletag.cmd.push(function() { googletag.display('div-gpt-ad-1759491994541-0'); });
   </script>
 </div>
- 
-			  <!-- /23079347111/sticky -->
-<div id='div-gpt-ad-1759493715342-0' style='min-width: 320px; min-height: 50px;'>
-  <script>
-    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1759493715342-0'); });
-  </script>
-</div>
+				
+				<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+<script>
+      window.googletag = window.googletag || {cmd: []};
+
+      // GPT ad slots
+      var anchorSlot_2;
+
+      googletag.cmd.push(function() {
+        anchorSlot_2 = googletag.defineOutOfPageSlot('//23079347111/sticky', googletag.enums.OutOfPageFormat.BOTTOM_ANCHOR);
+        anchorSlot_2.addService(googletag.pubads());
+
+         // Enable SRA and services.
+        googletag.pubads().enableSingleRequest();
+        googletag.enableServices();
+        googletag.display(anchorSlot_2);
+      });
+    </script>
 
 
 
