--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 					    <div class="games-single-item img-contain-isotope">
 					        <div class="games-thumb">
 					            <a href="../game/1v1-lol-offline">
-					                <img src="../assets/img/1v1.lol/1v1-lol-offline.webp" alt="1v1.LOL" title="1v1.LOL" />
+					                <img src="../assets/img/1v1.lol/1v1-lol-offline.webp" alt="1v1 LOL Offline" title="1v1 LOL Offline" />
 					            </a>
 					        </div>
 					        <div class="games-desc">
