--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
     <link rel="stylesheet" href="assets/css/responsive.css">	
 	
 	  <style>
+/* Fix grid for game layout */
+.games-area, .games-list, .games-row {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+  justify-items: center;
+}
+
+
+
+
+		  
 .load-more-btn{
   display:inline-block; padding:12px 22px; border:0; border-radius:10px;
   font-weight:700; cursor:pointer; background:#ff7a21; color:#111; 
