--- a/index.html
+++ b/index.html
@@ -371,6 +371,21 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 
                                <div class="clearfix gamesContainer">
 								   <h2>Popular Games</h2>
+								   				       <!-- start game item -->
+				<div class="games-item desktop">
+				    <div class="games-single-item img-contain-isotope">
+				        <div class="games-thumb">
+				            <a href="./game/ragdoll-hit">
+				                <img src="assets/img/ragdoll-hit/ragdoll-hit.webp" alt="Ragdoll Hit" title="Ragdoll Hit" />
+				            </a>
+				        </div>
+				        <div class="games-desc">
+				            <h3><a href="./game/ragdoll-hit">Ragdoll Hit</a></h3>
+				            <p class="game-meta">Sport | Desktop | 2 Player games</p>
+				        </div>
+				    </div>
+				</div>
+				<!-- end game item -->
 				
 				<!-- start game item -->
 				<div class="games-item desktop">
