--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 				        </div>
 				        <div class="games-desc">
 				            <h3><a href="./game/ragdoll-hit">Ragdoll Hit</a></h3>
-				            <p class="game-meta">Sport | Desktop | 2 Player games</p>
+				            <p class="game-meta">Advanture | Desktop | 2 Player games</p>
 				        </div>
 				    </div>
 				</div>
