--- a/adventure/index.html
+++ b/adventure/index.html
@@ -156,6 +156,21 @@
     </div>
 </div>
 <!-- end game item -->
+															   				       <!-- start game item -->
+				<div class="games-item desktop">
+				    <div class="games-single-item img-contain-isotope">
+				        <div class="games-thumb">
+				            <a href="../game/ragdoll-hit">
+				                <img src="../assets/img/ragdoll-hit/ragdoll-hit.webp" alt="Ragdoll Hit" title="Ragdoll Hit" />
+				            </a>
+				        </div>
+				        <div class="games-desc">
+				            <h3><a href="../game/ragdoll-hit">Ragdoll Hit</a></h3>
+				            <p class="game-meta">Advanture | Desktop | 2 Player games</p>
+				        </div>
+				    </div>
+				</div>
+				<!-- end game item -->
 <div class="games-item desktop">
     <div class="games-single-item img-contain-isotope">
         <div class="games-thumb">
