--- a/2-player-games/index.html
+++ b/2-player-games/index.html
@@ -152,6 +152,21 @@ Popular 2 player games include action, racing, fighting, and strategy genres. Wh
 				    </div>
 				</div>
 				<!-- end game item -->
+															   				       <!-- start game item -->
+				<div class="games-item desktop">
+				    <div class="games-single-item img-contain-isotope">
+				        <div class="games-thumb">
+				            <a href="../game/ragdoll-hit">
+				                <img src="../assets/img/ragdoll-hit/ragdoll-hit.webp" alt="Ragdoll Hit" title="Ragdoll Hit" />
+				            </a>
+				        </div>
+				        <div class="games-desc">
+				            <h3><a href="../game/ragdoll-hit">Ragdoll Hit</a></h3>
+				            <p class="game-meta">Advanture | Desktop | 2 Player games</p>
+				        </div>
+				    </div>
+				</div>
+				<!-- end game item -->
 				<!-- start game item -->
                                      <div class="games-item desktop">
         <div class="games-single-item img-contain-isotope">
