--- a/game/drift-hunters.html
+++ b/game/drift-hunters.html
@@ -12,7 +12,7 @@
 	  <meta name="publisher" content="FAF Games Team">
 	  <meta name="robots" content="index, follow">
       <!-- Title -->
-      <title>"Drift Hunters Unblocked - Play Online for Free | FAF Games"</title>
+      <title>Drift Hunters Unblocked - Play Online for Free | FAF Games</title>
       <!-- Favicon -->
       <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
       <meta property="og:image" content="https://faf-games.github.io/assets/img/drifthunters/drift-hunters-logo.webp">
