--- a/game/parking-fury-3d-beach-city.html
+++ b/game/parking-fury-3d-beach-city.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
  <html lang="en-US">
 <head>
-    <meta name="description" content="Play Parking Fury 3D Unblocked: Play Now for Free on FAf Games online for free at FAF Games! Enjoy safe and fun unblocked games anywhere, no downloads needed, just click and start playing now.">
     <meta property="og:image" content="https://faf-games.github.io/assets/img/parkingfury3d/parking-fury-3d-beach-city-logo.webp">
           <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
           <title>Parking Fury 3D Unblocked: Play Now for Free on FAf Games</title>
-          
+          <meta name="description" content=" Play Parking Fury 3D Unblocked: Play Now for Free on FAF Games online for free at FAF Games! Enjoy safe and fun unblocked games anywhere, no downloads needed, just click and start playing now.">
+
            <meta name="keywords" content="
            parking fury 3d: beach city unblocked 
            parking fury 3d: beach city poki 
