--- a/game/3d-car-simulator.html
+++ b/game/3d-car-simulator.html
@@ -1393,7 +1393,7 @@
            </body>
            <script>
               function loadMainGame(){
-              var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://ubg77.github.io/edit/3d-car-simulator/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+              var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://class804.github.io/g1/3d-car-simulator/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
               document.getElementById("loadgame").innerHTML = html;
               document.getElementById('loadgame').scrollIntoView();
               }
