--- a/game/basketball-bros.html
+++ b/game/basketball-bros.html
@@ -753,7 +753,7 @@
          <script>
         function loadMainGame()
         {
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://basketbros.gitlab.io/file/?gd_sdk_referrer_url=https://faf-games.github.io/game/basketball-bros" width="500" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://class804.github.io/g3/basket-bros/" width="500" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             document.getElementById('loadgame').scrollIntoView();
         }
