--- a/game/angry-gran-run.html
+++ b/game/angry-gran-run.html
@@ -1305,7 +1305,7 @@
     <script>
         function loadMainGame()
         {
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://webglmath.github.io/angry-gran-run/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://class804.github.io/g2/angry-gran-run/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             document.getElementById('loadgame').scrollIntoView();
         }
