--- a/game/retro-bowl.html
+++ b/game/retro-bowl.html
@@ -760,7 +760,7 @@
          <script>
         function loadMainGame()
         {
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://retrobowlunblocked.github.io/" width="500" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src=https://class804.github.io/g18/retro-bowl/" width="500" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             document.getElementById('loadgame').scrollIntoView();
         }
