--- a/game/crossy-road.html
+++ b/game/crossy-road.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Crossy Road Unblocked - Play Online for Free | FAF Games</title>
-        <meta name="description" content="
+       <meta name="description" content=" Play Crossy Road unblocked online — the fun and addictive arcade game where you help your character cross busy roads, rivers, and tracks without getting hit! Test your reflexes, unlock new characters, and see how far you can go in this endless hopping adventure.">
             
         <meta name="title" content="Crossy Road">
         <meta name="keywords" content="Crossy Road Game, Running Game, Runninggame, Running Games, RunningGames
