--- a/index.html
+++ b/index.html
@@ -434,6 +434,21 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 					    </div>
 					</div>
 					<!-- end game item -->
+								   				        <!-- start game item -->
+				       <div class="games-item desktop">
+					    <div class="games-single-item img-contain-isotope">
+					        <div class="games-thumb">
+					            <a href="../game/crossy-road">
+					                <img src="../assets/img/crossy-road/logo.webp" alt="Crossy Road" title="Crossy Road" />
+					            </a>
+					        </div>
+					        <div class="games-desc">
+					            <h3><a href="../game/crossy-road">Crossy Road</a></h3>
+					            <p class="game-meta">Advanture | Skill | Desktop</p>
+					        </div>
+					    </div>
+					</div>
+					<!-- end game item -->
 				<!-- start game item -->
 				<div class="games-item desktop">
 				    <div class="games-single-item img-contain-isotope">
