--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 					    <div class="games-single-item img-contain-isotope">
 					        <div class="games-thumb">
 					            <a href="../game/crossy-road">
-					                <img src="../assets/img/crossy-road/logo.webp" alt="Crossy Road" title="Crossy Road" />
+					                <img src="../assets/img/crossyroad/crossy-road.png" alt="Crossy Road" title="Crossy Road" />
 					            </a>
 					        </div>
 					        <div class="games-desc">
