--- a/game/idle-breakout.html
+++ b/game/idle-breakout.html
@@ -6,9 +6,9 @@
                 <meta name="viewport" content="width=device-width, initial-scale=1">
                 <meta http-equiv="X-UA-Compatible" content="IE=edge">
                 <title>Idle Breakout Unblocked - Play Online for Free | FAF Games</title>
-                <meta name="description" content="
+               <meta name="description" content=" Play Idle Breakout Unblocked online — a modern twist on the classic brick breaker game. Click to destroy bricks, earn cash, and upgrade powerful balls to automate your progress. Build your strategy, unlock upgrades, and see how far you can go in this addictive idle clicker game!">
                     
-        	<meta name="keywords" content="Idle Breakout Game, Idle Games, IdleGames, Idle Games Pc, IdleGamesPc, Idle Games Online, IdleGamesOnline, Idle Games Free, IdleGamesFree">
+        	   <meta name="keywords" content="Idle Breakout Game, Idle Games, IdleGames, Idle Games Pc, IdleGamesPc, Idle Games Online, IdleGamesOnline, Idle Games Free, IdleGamesFree">
                <meta name="news_keywords" content="Idle Breakout unblocked
                Idle Breakout hack
                Idle Breakout 2
@@ -668,7 +668,7 @@
                 <script>
                     function loadMainGame()
                     {
-                        var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://unblockedgames76.gitlab.io/idle-breakout/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+                        var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://class804.github.io/g10/idle-breakout/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
                         document.getElementById("loadgame").innerHTML = html;
                         document.getElementById('loadgame').scrollIntoView();
                     }
