--- a/index.html
+++ b/index.html
@@ -371,6 +371,19 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 
                                <div class="clearfix gamesContainer">
 								   <h2>Popular Games</h2>
+<div class="bg-[#111827] rounded-xl overflow-hidden hover:-translate-y-1 hover:shadow-lg transition duration-300 w-full max-w-[200px] text-center">
+  <div class="games-thumb">
+    <a href="./game/ragdoll-hit">
+      <img class="w-full h-[180px] object-cover rounded-t-xl" src="/assets/img/ragdoll-hit/ragdoll-hit.webp" alt="Ragdoll Hit">
+    </a>
+  </div>
+  <div class="p-3 text-white">
+    <h3 class="text-base font-semibold hover:text-yellow-400"><a href="./game/ragdoll-hit">Ragdoll Hit</a></h3>
+    <p class="text-sm text-gray-400">Adventure | Desktop | 2 Player Games</p>
+  </div>
+</div>
+
+								   
 								   				       <!-- start game item -->
 				<div class="games-item desktop">
 				    <div class="games-single-item img-contain-isotope">
