--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
                     <div class="games-masonary">
                         <div class="projectFilter project-btn">
                             <ul>
-                                <li><a href="https://discord.com/invite/uGaX6kWA7u" data-filter="*" class="current">Join Our Discord</a></li>
+                                <li><a href="#" data-filter="*" class="current">Desktop</a></li>
                                 <li><a href="#" data-filter=".desktop">Desktop</a></li>
                                 <li><a href="#" data-filter=".mobile">mobile</a></li>
 			        <li><a href="#" data-filter=".desktop">Show All</a></li>
