--- a/game/getaway-shootout.html
+++ b/game/getaway-shootout.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Getway Shootout Unblocked - Play Online for Free | FAF Games</title>
-        <meta name="description" content="
+        <meta name="description" content=" Play Getaway Shootout and race to the finish in chaotic, physics-based battles! Jump, flip, and shoot your way to victory in this fun 2-player action game.">
        
             
         <meta name="title" content="Getway Shootout">
@@ -881,7 +881,7 @@
          <script>
         function loadMainGame()
         {
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://webglmath.github.io/getaway-shootout/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://class804.github.io/g8/getaway-shootout/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             document.getElementById('loadgame').scrollIntoView();
         }
