--- a/game/idle-miner.html
+++ b/game/idle-miner.html
@@ -2,17 +2,13 @@
 <!DOCTYPE html>
     <html lang="en-US">
         <head>
-    <meta property="og:image" content="https://faf-games.github.io/assets/img/idleminer/idle-miner.png">
+                <meta property="og:image" content="https://faf-games.github.io/assets/img/idleminer/idle-miner.png">
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
                 <meta http-equiv="X-UA-Compatible" content="IE=edge">
                 <title>Idle Miner Unblocked - Play Online for Free | FAF Games</title>
-                <meta name="description" content="Play Idle Miner game on FAF Games. 
-                Play Idle Miner, Idle Miner Unblocked on FAF Games. 
-                ✓ Free online game 
-                ✓ Fullscreen mode 
-                ✓ No registration required 
-                ✓ No Download. Have fun playing!">
+               <meta name="description" content="Play Idle Miner Unblocked online and build your mining empire! Manage workers, dig for gold, and upgrade your mines to earn massive profits in this fun idle management game.">
+
                 <meta name="keywords" content="Idle Miner Game, Idle Games, IdleGames, Idle Games Pc, IdleGamesPc, 
                Idle Games Online, 
                IdleGamesOnline, Idle Games Free, IdleGamesFree">
@@ -674,7 +670,7 @@
                 <script>
                     function loadMainGame()
                     {
-                        var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://ubg77.github.io/game131022/idle-miner/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+                        var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://class804.github.io/g10/idle-miner/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
                         document.getElementById("loadgame").innerHTML = html;
                         document.getElementById('loadgame').scrollIntoView();
                     }
