--- a/game/idle-mining-empire.html
+++ b/game/idle-mining-empire.html
@@ -7,12 +7,8 @@
                 <meta name="viewport" content="width=device-width, initial-scale=1">
                 <meta http-equiv="X-UA-Compatible" content="IE=edge">
                 <title>Idle Mining Empire Unblocked - Play Online for Free | FAF Games</title>
-                <meta name="description" content="Play Idle Mining Empire game on FAF Games. 
-                Play Idle Mining Empire, Idle Mining Empire Unblocked on FAF Games. 
-                ✓ Free online game 
-                ✓ Fullscreen mode 
-                ✓ No registration required 
-                ✓ No Download. Have fun playing!">
+                 <meta name="description" content=" Play Idle Mining Empire Unblocked online and grow your mining business from scratch! Hire workers, manage resources, and automate your production to become a gold mining tycoon.">
+
                 <meta name="keywords" content="Idle Mining Empire Game, Idle Games, IdleGames, Idle Games Pc, IdleGamesPc, 
                Idle Games Online, 
                IdleGamesOnline, Idle Games Free, IdleGamesFree">
@@ -674,7 +670,7 @@
                 <script>
                     function loadMainGame()
                     {
-                        var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://ubg77.github.io/fix/idle-mining-empire/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+                        var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://class804.github.io/g10/idle-mining-empire/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
                         document.getElementById("loadgame").innerHTML = html;
                         document.getElementById('loadgame').scrollIntoView();
                     }
