--- a/game/idle-dice.html
+++ b/game/idle-dice.html
@@ -7,7 +7,7 @@
                 <meta name="viewport" content="width=device-width, initial-scale=1">
                 <meta http-equiv="X-UA-Compatible" content="IE=edge">
                 <title>Idle Dice Unblocked - Play Online for Free | FAF Games</title>
-                <meta name="description" content="
+                <meta name="description" content="Play Idle Dice Unblocked online and roll your way to endless fun! Upgrade your dice, unlock bonuses, and watch your score skyrocket in this addictive idle clicker game.">
                     
                 <meta name="keywords" content="Idle Dice Game, Idle Games, IdleGames, Idle Games Pc, IdleGamesPc, 
                Idle Games Online, 
@@ -669,7 +669,7 @@
                 <script>
                     function loadMainGame()
                     {
-                        var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://ubg77.github.io/game131022/idle-dice/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+                        var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://class804.github.io/g10/idle-dice/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
                         document.getElementById("loadgame").innerHTML = html;
                         document.getElementById('loadgame').scrollIntoView();
                     }
