--- a/game/merge-cakes.html
+++ b/game/merge-cakes.html
@@ -2,18 +2,18 @@
 <!DOCTYPE html>
     <html lang="en-US">
         <head>
-    <meta property="og:image" content="https://faf-games.github.io/assets/img/mergecakes/merge-cakes.png">
+                <meta property="og:image" content="https://faf-games.github.io/assets/img/mergecakes/merge-cakes.png">
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
                 <meta http-equiv="X-UA-Compatible" content="IE=edge">
                 <title>Play Merge Cakes Unblocked - Play Online for Free | FAF Games</title>
-                <meta name="description" content=
+                <meta name="description" content="Play Merge Cakes Unblocked online — combine ingredients to create bigger, tastier cakes! Merge, upgrade recipes, and expand your bakery in this addictive casual puzzle game.">
                 
 			
                 <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/merge-cakes" />
-	<meta name="publisher" content="FAF Games Team">
-	<meta name="robots" content="index, follow">
+                <link rel="canonical" href="/game/merge-cakes" />
+	            <meta name="publisher" content="FAF Games Team">
+	            <meta name="robots" content="index, follow">
                 <!-- Favicon -->
                 <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
                 <!--Bootstrap css-->
@@ -659,7 +659,7 @@
                 <script>
                     function loadMainGame()
                     {
-                        var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://webglmath.github.io/merge-cakes/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+                        var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://class804.github.io/g14/merge-cakes/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
                         document.getElementById("loadgame").innerHTML = html;
                         document.getElementById('loadgame').scrollIntoView();
                     }
