--- a/game/fortnite.html
+++ b/game/fortnite.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Fortnite Unblocked - Play Online for Free | FAF Games</title>
-        <meta name="description" content="Fortnite: What Is It? 
+        <meta name="description" content=" Play Fortnite Unblocked online — jump into the ultimate battle royale! Build, fight, and survive against players worldwide in this fast-paced, action-packed adventure.">
        
         <meta property="og:image" content="https://faf-games.github.io/assets/img/fortnite/fortnite.png">
         <meta name="title" content="Fortnite">
