--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="author" content="FAF Games Team">
 
     <!-- Title -->
-    <title>Play Unblocked Games | Unblocked Games Premium</title>
+    <title>Play Unblocked Games | Unblocked Games G+ 2025</title>
 	<meta name="publisher" content="FAF Games Team">
 	<link rel="canonical" href="https://faf-games.github.io/">
     <!-- Favicon -->
