--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content=" Unblocked Games for Chromebook - Play a wide range of Unblocked Games Premium you can play at school, work, or anywhere. No downloads needed, just click and start playing.">
+    <meta name="description" content=" Unblocked Games for Chromebook - Play a wide range of Unblocked games g+ you can play at school, work, or anywhere. No downloads needed, just click and start playing on faf games.">
     <meta name="keywords" content="FAF Games, unblocked games, unblocked games premium, online games, free games, play games online, school games, browser games, free to play games, no download games, adventure games, car games, racing games, action games, puzzle games, multiplayer games, educational games">
     <meta name="author" content="FAF Games Team">
 
