--- a/game/rooftop-snipers.html
+++ b/game/rooftop-snipers.html
@@ -7,7 +7,7 @@
          <meta name="viewport" content="width=device-width, initial-scale=1">
          <meta http-equiv="X-UA-Compatible" content="IE=edge">
          <title>Rooftop Snipers Unblocked - Play Online for Free | FAF Games</title>
-         <meta name="description" content="
+         <meta name="description" content=" Play Rooftop Snipers Unblocked — a fast-paced 2-player arcade shooter. Duel friends, pull off crazy stunts, and land the perfect shot in this pixel-style rooftop brawler.">
         
          <meta name="title" content="Rooftop Snipers">
          <meta name="keywords" content="Rooftop Snipers Game, Action Games, ActionGames, Action Games Pc, ActionGamesPc, 
