--- a/game/rooftop-snipers.html
+++ b/game/rooftop-snipers.html
@@ -13,12 +13,12 @@
          <meta name="keywords" content="Rooftop Snipers Game, Action Games, ActionGames, Action Games Pc, ActionGamesPc, 
          Action Games Online, 
          ActionGamesOnline, Action Games Free, ActionGamesFree">
-         <meta name="news_keywords" content="rooftop snipers unblocked
-         rooftop snipers game
-         rooftop snipers 2
-         rooftop snipers 76
-         rooftop snipers extension
-         rooftop snipers 2 unblocked">
+         <meta name="news_keywords" content="Rooftop Snipers Unblocked
+         Rooftop Snipers Game
+         Rooftop Snipers 2
+         Rooftop Snipers 76
+         Rooftop Snipers Extension
+         Rooftop Snipers 2 Unblocked">
          <meta name="author" content="FAF Games Team">
          <link rel="canonical" href="/game/rooftop-snipers" />
 	     <meta name="publisher" content="FAF Games Team">
