--- a/game/tank-trouble.html
+++ b/game/tank-trouble.html
@@ -394,7 +394,7 @@
           <div class="container">
 
                <div class="article-header">
-        <h1>Tank Trouble - Unblocked Games Unblocked</h1>
+        <h1>Tank Trouble - Unblocked</h1>
     </div>
             <div class="row justify-content-center">
               <div class="col-lg-12">
