--- a/shooting/index.html
+++ b/shooting/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Take aim and play shooting games at FAF Games, featuring a collection of unblocked games online, including action, adventure, and skill games, free to play.">
     <meta name="keyword" content="game, gaming, videogame, developer, steam, studio, team">
     <meta name="author" content="FAF Games Team">
-	 <link rel="canonical" href="/shooting/" />
+	 <link rel="canonical" href="/shooting/index.html" />
 
 	<meta name="publisher" content="FAF Games Team">
 	
@@ -68,34 +68,34 @@
             <a href="https://faf-games.github.io" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-            <a href="https://faf-games.github.io/action" class="nav-link">Action</a>
+            <a href="https://faf-games.github.io/action/index.html" class="nav-link">Action</a>
         </li>
         <li class="nav-item">
-            <a href="https://faf-games.github.io/adventure" class="nav-link">Adventure</a>
+            <a href="https://faf-games.github.io/adventure/index.html" class="nav-link">Adventure</a>
         </li>
         <li class="nav-item">
-            <a href="https://faf-games.github.io/bike" class="nav-link">Bike</a>
+            <a href="https://faf-games.github.io/bike/index.html" class="nav-link">Bike</a>
         </li>        
         <li class="nav-item">
-            <a href="https://faf-games.github.io/car" class="nav-link">Car</a>
+            <a href="https://faf-games.github.io/car/index.html" class="nav-link">Car</a>
         </li>  
 	    <li class="nav-item">
             <a href="https://faf-games.github.io/game/1v1-lol.html" class="nav-link">1v1.lol Unblocked</a>
         </li>
 	    </li>  
 	    <li class="nav-item">
-            <a href="https://faf-games.github.io/2-player-games" class="nav-link">2 Player Games</a>
+            <a href="https://faf-games.github.io/2-player-games/index.html" class="nav-link">2 Player Games</a>
         </li>
         <!-- More Dropdown -->
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">More</a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="https://faf-games.github.io/idle">Idle</a></li>
-                <li><a class="dropdown-item" href="https://faf-games.github.io/shooting">Shooting</a></li>
-                <li><a class="dropdown-item" href="https://faf-games.github.io/skill">Skill</a></li>
-                <li><a class="dropdown-item" href="https://faf-games.github.io/sport">Sport</a></li>
-                <li><a class="dropdown-item" href="https://faf-games.github.io/classroom6x">Classroom 6x</a></li>
-                <li><a class="dropdown-item" href="https://faf-games.github.io/2-player-games">2 Player Games</a></li>
+                <li><a class="dropdown-item" href="https://faf-games.github.io/idle/index.html">Idle</a></li>
+                <li><a class="dropdown-item" href="https://faf-games.github.io/shooting/index.html">Shooting</a></li>
+                <li><a class="dropdown-item" href="https://faf-games.github.io/skill/index.html">Skill</a></li>
+                <li><a class="dropdown-item" href="https://faf-games.github.io/sport/index.html">Sport</a></li>
+                <li><a class="dropdown-item" href="https://faf-games.github.io/classroom6x/index.html">Classroom 6x</a></li>
+                <li><a class="dropdown-item" href="https://faf-games.github.io/2-player-games/index.html">2 Player Games</a></li>
             </ul>
         </li>
     </ul>
