--- a/adventure/index.html
+++ b/adventure/index.html
@@ -9,7 +9,7 @@
     <meta name="keyword" content="game, gaming, videogame, developer, steam, studio, team">
     <meta name="author" content="FAF Games Team">
 	<meta name="publisher" content="FAF Games Team">
-	 <link rel="canonical" href="/adventure/index.html/" />
+	 <link rel="canonical" href="/adventure/index.html" />
     <!-- Title -->
     <title>Adventure Games 🏞️ | Unblocked Games | FAF Games</title>
     <!-- Favicon -->
